# simple_qp

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: lp_example.rs  minimalistic_example.rs  path_smoothing.rs  sequential_hessian_builder_example.rs
examples/path_smoothing/: Cargo.toml
examples/path_smoothing/src/: main.rs
src/: constraint.rs  lib.rs  main.rs  problem.rs  problem_variables.rs  util.rs
src/expressions/: add.rs  affine_expression.rs  div.rs  mod.rs  mul.rs  quadratic_expression.rs  sub.rs  variable.rs
src/solver/: clarabel_solver.rs  coin_cbc_solver.rs  mod.rs  osqp_solver.rs  util.rs
