[package]
name = "simple_qp"
version = "0.1.0"
license = "MIT"
description = "Allows formulating Quadratic Programming problems in a symbolic way."
homepage = "https://github.com/Deepthought73/simple_qp"
repository = "https://github.com/Deepthought73/simple_qp"
readme = "README.md"
edition = "2021"

[dependencies]
osqp = "0.6.2"
maplit = "1.0.2"
clarabel = "0.9.0"

[dev-dependencies]
rand = "0.8.5"
plotpy = "1.0.0"